apply plugin: 'com.android.library'
apply plugin: 'maven-publish'

android {
    namespace "de.KnollFrank.lib.settingssearch"
    compileSdk 34

    defaultConfig {
        minSdkVersion 24
        targetSdkVersion 34
        vectorDrawables.useSupportLibrary = true
    }

    buildTypes {
        release {
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    publishing {
        singleVariant('release') {
            withSourcesJar()
        }
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.preference:preference:1.2.1'
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation 'com.google.guava:guava:33.3.1-android'
    // https://mvnrepository.com/artifact/org.threeten/threetenbp
    implementation 'org.threeten:threetenbp:1.6.9'
    // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
    implementation 'org.jgrapht:jgrapht-core:1.5.2'
    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation 'com.google.code.gson:gson:2.11.0'
    // https://mvnrepository.com/artifact/commons-codec/commons-codec
    implementation 'commons-codec:commons-codec:1.17.1'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    // https://mvnrepository.com/artifact/com.codepoetics/ambivalence
    implementation 'com.codepoetics:ambivalence:0.2'
    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
}

publishing {
    publications {
        release(MavenPublication) {
            groupId = 'com.github.KnollFrank'
            artifactId = 'SettingsSearch'
            version = 'v2.5.1'

            afterEvaluate {
                from components.release
            }
        }
    }
}
